# petai-anchor

./: Anchor.toml  package-lock.json  package.json
programs/petai/: Cargo.toml  readme.md
programs/petai/src/: constants.rs  errors.rs  lib.rs
programs/petai/src/instructions/: initialize.rs  mod.rs  update_program_state.rs
programs/petai/src/instructions/assets/: buy_asset.rs  collect_asset.rs  create_asset.rs  mod.rs  models.rs  put_asset.rs  use_asset.rs
programs/petai/src/instructions/decors/: mod.rs  models.rs  put_decor.rs
programs/petai/src/instructions/effects/: mod.rs  models.rs  put_effect.rs
programs/petai/src/instructions/pet/: init_pet.rs  init_player.rs  mod.rs  update_pet_state.rs  utils.rs
programs/petai/src/instructions/player/: init_player.rs  mod.rs  models.rs  update_pet_nft.rs  update_pet_state.rs  update_player.rs  update_player_pet.rs
programs/petai/src/instructions/token/: create_token.rs  mint_token.rs  mod.rs  update_token.rs
programs/petai/src/models/: game_effect.rs  metadata_args.rs  metadata_types.rs  mod.rs  real_dog_config.rs
programs/petai/src/states/: asset_state.rs  collectable_asset_state.rs  decor_state.rs  effect_state.rs  mod.rs  pet_state.rs  player_state.rs  program_state.rs  real_dogs_config_state.rs
tests/: 1_petai.ts  2_token.ts  3_effects.ts  3_player_logic.ts  4_assets.ts  4_player_logic.ts  5_assets.ts  constants.ts  pdas.ts  utils.ts
