[package]
name = "petai"
version = "0.1.0"
description = "Program for petai game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "petai"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = []


[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = [ 'metadata' ]}
clockwork-sdk = { git = "https://github.com/Olex-Engineering/clockwork.git", branch = "feature/update-anchor", version = "2.0.19" }
mpl-token-metadata = { version = "4.0.0"}
